Collect-TV-20180201/src/objects/TECHNET_Transaction__c.object
<CustomObject>
    <description>Junction object between TECHNET Items and TECHNET Orders</description>
    <fields>
        <fullName>Order_Quantity__c</fullName>
        <label>Order Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <formula>Order_Quantity__c *  Transaction_Items__r.Price_Per_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Items__c</fullName>
        <label>Transaction Items</label>
        <referenceTo>TECHNET_Item__c</referenceTo>
        <relationshipLabel>TECHNETTransactions (Transaction Items)</relationshipLabel>
        <relationshipName>TECHNETTransactions1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Transaction_Order__c</fullName>
        <label>Transaction Order</label>
        <referenceTo>TECHNET_Order__c</referenceTo>
        <relationshipLabel>TECHNETTransactions (Transaction Order)</relationshipLabel>
        <relationshipName>TECHNETTransactions1</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>TECHNET Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TECHNET Transaction Name</label>
        <type>Text</type>
    </nameField>
    <recordTypes>
        <fullName>Dell_Corning</fullName>
        <active>true</active>
        <label>Dell-Corning</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>